--- a/package.json
+++ b/package.json
@@ -3,17 +3,28 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "main.js",
+  "build": {
+    "files": [
+      "dist/**/*",
+      "main.js"
+    ]
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "rm -r node_modules && npm install --platform=win32 && electron-forge make && rm -r node_modules && npm i"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/vite": "^4.1.12",
     "autoprefixer": "^10.4.21",
     "dom-to-image-more": "^3.7.1",
+    "electron-squirrel-startup": "^1.0.1",
     "html2canvas": "^1.4.1",
     "html2canvas-pro": "^1.5.11",
     "postcss": "^8.5.6",
@@ -22,10 +33,19 @@
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.8.3",
+    "@electron-forge/maker-deb": "^7.8.3",
+    "@electron-forge/maker-rpm": "^7.8.3",
+    "@electron-forge/maker-squirrel": "^7.8.3",
+    "@electron-forge/maker-zip": "^7.8.3",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.8.3",
+    "@electron-forge/plugin-fuses": "^7.8.3",
+    "@electron/fuses": "^1.8.0",
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "electron": "^37.3.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
