add electron:fix package.json

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "electron-forge start",
-    "package": "electron-forge package",
+    "start": "npm run i && npm run build && electron-forge start",
+    "package": "npm run i && npm run build && electron-forge package",
     "make": "npm run i && npm run build && electron-forge make"
   },
   "dependencies": {
