--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "build": {
     "files": [
       "dist/**/*",
-      "main.js"
+      "main.js",
+      "preload.js"
     ]
   },
   "scripts": {
