--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "scripts": {
     "dev": "vite",
+    "dev:electron": "concurrently \"vite\" \"wait-on http://localhost:3003 && electron-forge start\"",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -57,6 +58,8 @@
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
+    "concurrently": "^8.2.0",
+    "wait-on": "^7.0.1",
     "@electron-forge/cli": "^7.8.3",
     "@electron-forge/maker-deb": "^7.8.3",
     "@electron-forge/maker-rpm": "^7.8.3",
